--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,7 @@ body {
 body {
     &.game {
         background: url("../bg/dw_bg.jpg");
+        background-size: cover;
     }
 
     margin: 0 auto;
