--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ body {
         background-size: cover;
     }
 
-    margin: 0 auto;
+    margin: 0 auto !important; 
     max-width: 480px;
 
     background-size: cover;
