--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,11 @@
 $direction_size: 2px;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .flex {
     display: flex;
     justify-content: center;
@@ -18,13 +20,14 @@ html,
 body {
     height: 100%;
 }
+
 body {
     &.game {
         background: url("../bg/dw_bg.jpg");
         background-size: cover;
     }
 
-    margin: 0 auto !important; 
+    margin: 0 auto !important;
     max-width: 480px;
 
     background-size: cover;
@@ -32,6 +35,7 @@ body {
     color: white;
     font-size: 16px;
 }
+
 .btn {
     padding: 0 8px;
     background: rgba(255, 255, 255, 0.2);
@@ -40,10 +44,12 @@ body {
     line-height: 40px;
     border-radius: 3px;
 }
+
 a {
     text-decoration: none;
     color: inherit;
 }
+
 .game-container {
     @extend .flex;
     flex-wrap: wrap;
@@ -51,10 +57,12 @@ a {
     background: rgba(0, 0, 0, 0.5);
     height: 100%;
     overflow: hidden;
-    & > div {
+
+    &>div {
         width: 100%;
     }
 }
+
 .heading {
     @extend .flex;
     // margin-top: 5px;
@@ -63,37 +71,54 @@ a {
     height: 50px;
     // background:red;
 }
+
 .heading .time {
     width: 65px;
     text-align: center;
     font-size: 2.6rem;
 }
+
 .heading .name {
     text-align: center;
     font-size: 2.6rem;
 }
+
 .grid-cell {
     @extend .flex;
     margin: 0 auto;
     max-width: 400px;
 }
+
 .grid-item {
     @extend .flex;
     position: relative;
     float: left;
     height: 100%;
     border-radius: 5px;
-    & > div {
+
+    &>div {
         width: 100%;
         height: 100%;
     }
 }
+
+.img-circle {
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    -moz-box-shadow: 0px 0px 25px #fc813f;
+    -webkit-box-shadow: 0px 0px 25px #fc813f;
+    box-shadow: 0px 0px 25px #fc813f;
+}
+
 .grid-item.action .grid-item-content {
     background: #fc813f;
 }
+
 .grid-item.hidden .grid-item-content {
     opacity: 0;
 }
+
 .grid-item-content {
     @extend .flex;
     padding: 1px;
@@ -101,24 +126,28 @@ a {
     color: white;
     font-size: 12px;
     transition: all 0.2s ease;
-    border-radius: 3px;
+    border-radius: 10px;
 }
+
 .grid-item-content img {
     width: 100px;
     height: 100px;
     cursor: pointer;
 }
+
 .grid-item-direction {
     position: absolute;
     pointer-events: none;
-    & > div {
+
+    &>div {
         position: absolute;
         background: #fc813f;
         opacity: 0;
     }
+
     &.up,
     &.down {
-        & > div.y {
+        &>div.y {
             margin: 0 auto;
             left: 0;
             right: 0;
@@ -126,9 +155,10 @@ a {
             height: 50%;
         }
     }
+
     &.left,
     &.right {
-        & > div.x {
+        &>div.x {
             margin: auto 0;
             top: 0;
             bottom: 0;
@@ -136,22 +166,26 @@ a {
             height: $direction_size;
         }
     }
-    &.up > div.up {
+
+    &.up>div.up {
         top: 0;
         opacity: 1;
         animation: height 0.2s ease;
     }
-    &.down > div.down {
+
+    &.down>div.down {
         bottom: 0;
         opacity: 1;
         animation: height 0.2s ease;
     }
-    &.left > div.left {
+
+    &.left>div.left {
         left: 0;
         opacity: 1;
         animation: width 0.2s ease;
     }
-    &.right > div.right {
+
+    &.right>div.right {
         right: 0;
         opacity: 1;
         animation: width 0.2s ease;
@@ -161,9 +195,11 @@ a {
 .footer {
     text-align: center;
 }
+
 .name-container {
     flex-direction: column;
 }
+
 .winner {
     display: flex;
     justify-content: center;
@@ -180,6 +216,7 @@ a {
         text-shadow: -5px 5px 0px #464545;
         margin-bottom: 50px;
     }
+
     .timeUsed {
         font: bold 1.5rem "Open Sans", sans-serif;
         color: white;
@@ -219,7 +256,7 @@ $gray: #9b9b9b;
         color: transparent;
     }
 
-    &:placeholder-shown ~ .form__label {
+    &:placeholder-shown~.form__label {
         font-size: 1.3rem;
         cursor: text;
         top: 20px;
@@ -236,7 +273,7 @@ $gray: #9b9b9b;
 }
 
 .form__field:focus {
-    ~ .form__label {
+    ~.form__label {
         position: absolute;
         top: 0;
         display: block;
@@ -245,19 +282,23 @@ $gray: #9b9b9b;
         color: $primary;
         font-weight: 700;
     }
+
     padding-bottom: 6px;
     font-weight: 700;
     border-width: 3px;
     border-image: linear-gradient(to right, $primary, $secondary);
     border-image-slice: 1;
 }
+
 /* reset input */
 .form__field {
+
     &:required,
     &:invalid {
         box-shadow: none;
     }
 }
+
 .button-start {
     position: relative;
     background: #ecd300;
@@ -293,14 +334,17 @@ body {
     0% {
         height: 0;
     }
+
     100% {
         height: 50%;
     }
 }
+
 @keyframes width {
     0% {
         width: 0;
     }
+
     100% {
         width: 50%;
     }
@@ -310,15 +354,18 @@ body {
     .heading {
         padding: 0 28px;
     }
+
     .grid-item-content img {
         width: 100px;
         height: 100px;
     }
 }
+
 @media screen and (max-width: 325px) {
     .heading {
         padding: 0 28px;
     }
+
     .grid-item-content img {
         width: 35px;
         height: 35px;
