--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@ a {
   height: 100%;
 }
 
+.img-circle {
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -moz-box-shadow: 0px 0px 25px #fc813f;
+  -webkit-box-shadow: 0px 0px 25px #fc813f;
+  box-shadow: 0px 0px 25px #fc813f;
+}
+
 .grid-item.action .grid-item-content {
   background: #fc813f;
 }
