--- a/css/style.scss
+++ b/css/style.scss
@@ -284,9 +284,9 @@ $gray: #9b9b9b;
         font-weight: 700;
     }
 
-    border-left: none;
-    border-right: none;
-    border-top: none;
+    border-left: 0px none;
+    border-right: 0px none;
+    border-top: 0px none;
     padding-bottom: 6px;
     font-weight: 700;
     border-width: 3px;
