--- a/css/style.css
+++ b/css/style.css
@@ -237,9 +237,9 @@ a {
 }
 
 .form__field:focus {
-  border-left: none;
-  border-right: none;
-  border-top: none;
+  border-left: 0px none;
+  border-right: 0px none;
+  border-top: 0px none;
   padding-bottom: 6px;
   font-weight: 700;
   border-width: 3px;
@@ -321,8 +321,8 @@ body {
   }
 
   .grid-item-content img {
-    width: 35px;
-    height: 35px;
+    width: 50px;
+    height: 50px;
   }
 }
 
